2002-12-16  Sam Steingold  <sds@gnu.org>

	* predtype.d (COERCE): accept CLOS class object as a type-spec

2002-12-16  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (disassemble-closure): print the list of special
	variables read and written

2002-12-16  Sam Steingold  <sds@gnu.org>

	* type.lisp (*canonicalize-type-prefer-clos*): new variable
	(canonicalize-type): depending on *canonicalize-type-prefer-clos*,
	return a CLOS class (e.g., NUMBER) or a list (e.g., (OR REAL COMPLEX))
	(subtypep): try CLOS before playing with lists

2002-12-16  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (DYNAMIC_8BIT_VECTOR): Renamed from DYNAMIC_BIT_VECTOR.
	Expect the length in bytes, not bits.
	(FREE_DYNAMIC_8BIT_VECTOR): Renamed from FREE_DYNAMIC_BIT_VECTOR.
	* stream.d: Update callers.
	* pathname.d: Update callers.

2002-12-04  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d: Reorder some definitions, so that 'object' and
	'gcv_object_t' get defined earlier.

	* hashtabl.d (sxhash_atom): Really mask out all non-type bits.

	* io.d (fehler_read_eval_forbidden): Use const.

	* package.d (import): Remove unused macros CONFLICT1, CONFLICT2.

	* pathname.d (directory_diff_ab): Remove extra declaration.

	* amigaaux.d: Use WIDE_SOFT instead of WIDE.
	* spvw_allocate.d (mymalloc): Likewise.

	* lispbibl.d (fake_gcv_object): New macro.
	(SAVE_REGISTERS, finish_entry_frame, make_HANDLER_frame): Use it.
	* eval.d (funcall_iclosure, interpret_bytecode_): Likewise.
	* control.d (make_variable_frame, finish_flet): Likewise.

2002-12-15  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_handles): handle KEYBOARD-STREAMs

2002-12-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (DYNAMIC_BIT_VECTOR): make an 8bit vector, not 1bit
	vector, because READ-FLOAT, WRITE-FLOAT, WRITE-INTEGER and
	WRITE-FLOAT will pass this bit vector to STREAM-READ-BYTE-SEQUENCE
	and STREAM-WRITE-BYTE-SEQUENCE

2002-12-13  Sam Steingold  <sds@gnu.org>

	CLUE and CLIO now compile with MIT-CLX